Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34989

In case of ActiveQt dll Platform plugin is never picked up from its deployed directory.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.1
    • 5.1.0
    • ActiveX Support
    • None
    • windows
    • QtCore: 75a75624913a41274ff94aa5b491b303367c6a20 (stable 5.2.1), Active Qt da033ca3eb390539720674e843015a5c7601e0b2 (stable 5.2.1)

      Deploying ActiveX Dll runs into problems with the Qt platform abstraction.
      When an application loads the ActiveX-Dll (starting with regsvr32.exe for registering) the Qt library searches for the QWindows.dll (platform abstraction) and no matter where windows.dll is kept it never finds it.
      -App\plugins\platforms
      -App\platforms
      -App

      It can be easily reproduced with the Qt Example in examples\activeqt\wrapper.

      Just build this example with MSVS2010 (it registers well after building on development machine) and deploy it to target machine where Qt is not present. Copy all needed Dlls and subdirectories into the directory where the AxtiveX (wrapper) Dll is located.

      Then type "regsvr32 wrapperax.dll". (it will complain about windows QPA)

      Only way to get it register is to set the QT_QPA_PLATFORM_PLUGIN_PATH in terminal.

      It is may be related to QTBUG-29550

        1. qtbug34989_active_diag.patch
          0.6 kB
        2. qtbug34989_diag.patch
          2 kB
        3. qtbug34989.log
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes