Point QCoreApplication to location of DLL in ActiveQt.

Task-number: QTBUG-34989

[ChangeLog][ActiveQt][QTBUG-34989] Pick up plugins from deployment location of Active X DLLs.

Change-Id: I53f1f8789ede9b6816c2d794b5a991cdf78b1c50
Reviewed-by: Andy Shaw <andy.shaw@digia.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>